fix: bar style in dark mode

--- a/src/benchmark/ProgressBar.module.scss
+++ b/src/benchmark/ProgressBar.module.scss
@@ -25,7 +25,7 @@
 }
 
 :global(.dark) {
-  .inner-container {
+  .innerContainer {
     background: var(--rp-c-bg-soft);
   }
 }
